02-aplicacoes/moodle/moodle-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-deployment
  labels:
    app: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - name: moodle
        image: nginx
        ports:
        - containerPort: 80
