02-aplicacoes/moodle/moodle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
  labels:
    name: moodle-service
spec:
  selector:
    app: moodle
  #type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
