02-aplicacoes/moodle/moodle-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-moodle
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: moodle.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: moodle-service
          servicePort: 80
